# runiq

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
contrib/: runiq.bash
examples/: basic.rs
src/: filters.rs  lib.rs  main.rs  options.rs  statistics.rs
src/filters/: consecutive.rs  digest.rs  mod.rs  naive.rs
templates/: basic.tera
