[package]
name = "runiq"
version = "1.2.2" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "An efficient way to filter duplicate lines from input, à la uniq."
repository = "https://github.com/whitfin/runiq"
keywords = ["filtering", "logging", "unique"]
categories = ["algorithms", "command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
bytelines = "2.4"
bytesize = "1.3"
clap = { version = "4.4", features = ["derive"] }
cli-table = "0.4"
format_num = "0.1"
growable-bloom-filter = "2.1"
identity-hash = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
