[package]
name = "runiq"
version = "2.0.0" # remember to update html_root_url
authors = ["Isaac Whitfield <iw@whitfin.io>"]
description = "An efficient way to filter duplicate lines from input, à la uniq."
repository = "https://github.com/whitfin/runiq"
keywords = ["filtering", "logging", "unique"]
categories = ["algorithms", "command-line-utilities", "text-processing"]
readme = "README.md"
edition = "2018"
license = "MIT"

[features]
default = ["cli"]
cli = ["bytelines", "bytesize", "clap", "cli-table", "format_num"]

[dependencies]
growable-bloom-filter = "2.1"
identity-hash = "0.1"
strum = "0.25"
strum_macros = "0.25"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# optional dependencies only use for CLI
bytelines = { version = "2.5", optional = true, default-features = false }
bytesize = { version = "1.3", optional = true }
clap = { version = "4.4", optional = true, features = ["derive"] }
cli-table = { version = "0.4", optional = true }
format_num = { version = "0.1", optional = true }

[dev-dependencies]
jen = "1.7"

[profile.release]
lto = true
